<resources>
    <string name="app_name">HW04_Gymlog_V3.0.0</string>
    <string name="enter_a_weight">enter_a_weight</string>
    <string name="weight">weight</string>
    <string name="exercise">exercise</string>
    <string name="reps">reps</string>
    <string name="log">log</string>
    <string name="enter_reps">enter_reps</string>
    <string name="enter_an_exercise">enter_an_exercise</string>
    <string name="nothing_to_show_time_to_hit_the_gym">nothing_to_show_time_to_hit_the_gym</string>
    <string name="login_welcome">Login_Welcome</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
</resources>